--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 
     <!--font awesome-->
     <script src="https://kit.fontawesome.com/db76c3a070.js" crossorigin="anonymous"></script>
+
+    <!-- favicon icon -->
+    <link rel="icon" href="images/favicon.png" type="image/png" sizes="16x16">
    
 </head>
 
