container final update

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
     </section>
     <section class="class2">
-        <div class="container">
+        <div style="padding: 0 0;" class="container">
             <h2 class="align-h2">An experience they’ll love</h2>
             <p class="para-section-2">Our fresh approach to business software has enabled over 50,000 companies big and
                 small across the globe
