iphone responsive added

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     <!-- --------------------------------SECTION 4  STARTS---------------------------------- -->
 
     <section class="class4 ">
-        <div class="std-page container sec-width">
+        <div style="padding: 0 0;" class="std-page container sec-width">
             <div class="l-section-heading align-center">
                 <h2>Trusted by 50K+ customers big and small</h2>
                 <p>We are a leading provider of modern SaaS solutions that solve multiple, complex business problems to
